fixed logo image and alignment

--- a/CareWheels/www/css/style.css
+++ b/CareWheels/www/css/style.css
@@ -104,3 +104,9 @@ embed{
   margin-left: 32px;
 }
 
+.alignLogo {
+  position: relative;
+  margin-left: 50%;
+  right: 125px;
+
+}
